add Employees list and Create new employee feature

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11213,3 +11213,7 @@ fieldset:disabled .btn {
   grid-template-columns: 1fr 3fr;
   grid-gap: 20px;
 }
+
+.form-section {
+    background: #e3e2de;
+}
